[project]
name = "CK3-Playset-Preserver"
version = "1.0.1"
description = "Crusader Kings III playset merger"
authors = [{ name = "Kaepbora" }, { name = "escalonn" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/Ant0nidas/CK3-Playset-Preserver"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
include = ["*.py"]

[tool.pixi.project]
platforms = ["win-64", "osx-64", "linux-64"]
channels = ["conda-forge"]

[tool.pixi.tasks]
clean = "rm -rf CK3_PP.exe _internal build dist CK3_PP.spec"
start_py = "python CK3_PP.py"

[tool.pixi.dependencies]
tqdm = "*"

[tool.pixi.pypi-dependencies]
CK3-Playset-Preserver = { path = ".", editable = true }

[tool.pixi.feature.build]
platforms = ["win-64"]
build-dependencies = { pyinstaller = "*" }

[tool.pixi.feature.build.tasks]
build = { cmd = """\
    rm -rf CK3_PP.exe _internal && \
    pyinstaller CK3_PP.py && \
    mv dist/*/* . && \
    rm -rf dist *.spec\
    """, inputs = ["CK3_PP.py"], outputs = ["CK3_PP.exe", "_internal/*"] }
start = { cmd = "CK3_PP.exe", depends-on = ["build"] }

[tool.pixi.feature.pypy]
dependencies = { pypy = "*" }

[tool.pixi.environments]
build = ["build"]
pypy = ["pypy"]
